HDFS-8549. Abort the balancer if an upgrade is in progress. Contributed by Andrew Wang. Backport HDFS-11808 by Akira Ajisaka.
(cherry picked from commit a7a7768341f1b7d3a8f2686e2f4d00c57f2e1d4f)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -102,6 +102,9 @@ Release 2.7.4 - UNRELEASED
     HDFS-11648. Lazy construct the IIP pathname.
     (daryn via kihwal, backported by zhz)
 
+    HDFS-8549. Abort the balancer if an upgrade is in progress. (wang)
+    Backport HDFS-11808 by Akira Ajisaka.
+
   OPTIMIZATIONS
 
     HDFS-10896. Move lock logging logic from FSNamesystem into FSNamesystemLock.
