HDFS-8797. WebHdfsFileSystem creates too many connections for pread. Contributed by Jing Zhao.
(cherry picked from commit e91ccfad07ec5b5674a84009772dd31a82b4e4de)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -10,6 +10,8 @@ Release 2.7.5 - UNRELEASED
 
     HDFS-9153. Pretty-format the output for DFSIO. (Kai Zheng via wheat9)
 
+    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)
+
   OPTIMIZATIONS
 
   BUG FIXES
