--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -37,6 +37,8 @@ Release 2.7.5 - UNRELEASED
 
     HDFS-8865. Improve quota initialization performance. Contributed by Kihwal Lee.
 
+    HDFS-9003. ForkJoin thread pool leaks. (Kihwal Lee via jing9)
+
 Release 2.7.4 - 2017-08-04
 
   INCOMPATIBLE CHANGES
