YARN-4140. RM container allocation delayed incase of app submitted to Nodelabel partition. (Bibin A Chundatt via wangda) Backport by Jonathan Hung.
(cherry picked from commit def374e666ed0c1d665aeb1b7307e09769448138)

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -105,6 +105,10 @@ Release 2.7.4 - UNRELEASED
     YARN-4925. ContainerRequest in AMRMClient, application should be able to
     specify nodes/racks together with nodeLabelExpression. Bibin A Chundatt
 
+    YARN-4140. RM container allocation delayed incase of app submitted to
+    Nodelabel partition. (Bibin A Chundatt via wangda)
+    Backport by Jonathan Hung.
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
