--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -115,6 +115,9 @@ Release 2.7.4 - UNRELEASED
     YARN-1471. The SLS simulator is not running the preemption policy
     for CapacityScheduler (Carlo Curino via cdouglas) Backport by Ye Zhou.
 
+    YARN-4017. container-executor overuses PATH_MAX.
+    (Sidharta Seethana via vvasudev)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
