YARN-4302. SLS not able start due to NPE in SchedulerApplicationAttempt. Contributed by Bibin A Chundatt.
(cherry picked from commit c28e16b40caf1e22f72cf2214ebc2fe2eaca4d03)

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -85,6 +85,9 @@ Release 2.7.4 - UNRELEASED
     YARN-5543. ResourceManager SchedulingMonitor could potentially terminate the
     preemption checker thread. (Min Shen, Jonathan Hung via shv).
 
+    YARN-4302. SLS not able start due to NPE in SchedulerApplicationAttempt
+    (Bibin A Chundatt via vvasudev)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
