HDFS-9153. Pretty-format the output for DFSIO. Contributed by Kai Zheng.

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -8,6 +8,8 @@ Release 2.7.5 - UNRELEASED
 
   IMPROVEMENTS
 
+    HDFS-9153. Pretty-format the output for DFSIO. (Kai Zheng via wheat9)
+
   OPTIMIZATIONS
 
   BUG FIXES
