YARN-4109. Exception on RM scheduler page loading with labels. (Mohammad Shahid Khan via rohithsharmaks)
(cherry picked from commit 8c180a13c82ab9d60f595e6942e35d51024dab53)

Conflicts:
	hadoop-yarn-project/CHANGES.txt

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -11,6 +11,9 @@ Release 2.7.4 - UNRELEASED
     YARN-6457. Allow custom SSL configuration to be supplied in WebApps.
     (Sanjay M Pujare via haibochen)
 
+    YARN-4109. Exception on RM scheduler page loading with labels.
+    (Mohammad Shahid Khan via rohithsharmaks)
+
   OPTIMIZATIONS
 
     YARN-5262. Optimize sending RMNodeFinishedContainersPulledByAMEvent for
