YARN-4612. Fix rumen and scheduler load simulator handle killed tasks properly. Contributed by Ming Ma.
(cherry picked from commit 4efdf3a979c361348612f817a3253be6d0de58f7)

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -90,6 +90,9 @@ Release 2.7.4 - UNRELEASED
 
     YARN-4367. SLS webapp doesn't load. (kasha)
 
+    YARN-4612. Fix rumen and scheduler load simulator handle killed tasks properly.
+    (Ming Ma via xgong)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
