YARN-4562. YARN WebApp ignores the configuration passed to it for keystore settings. Contributed by Sergey Shelukhin. Added CHANGES.txt entry
(cherry picked from commit 07920acc165f17e8fe3ca9d21283a2123223f438)
(cherry picked from commit 4baee3eb674cfdab6e1bfa678211354656829ae3)

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -73,6 +73,9 @@ Release 2.7.4 - UNRELEASED
     YARN-6310. OutputStreams in AggregatedLogFormat.LogWriter can be left
     open upon exceptions (Haibo Chen via jlowe)
 
+    YARN-4562. YARN WebApp ignores the configuration passed to it for keystore
+    settings (Sergey Shelukhin via vvasudev)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
