HDFS-10270. TestJMXGet:testNameNode() fails. Contributed by Gergely Novák
(cherry picked from commit d2f3bbc29046435904ad9418073795439c71b441)
(cherry picked from commit ccaf746eeacfafc7392a994f28ee9dbf595c84af)
(cherry picked from commit 9f5a22ff22b4841f78ac87c71c291456d20ef4d6)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -26,6 +26,8 @@ Release 2.6.6 - UNRELEASED
     HDFS-9740. Use a reasonable limit in DFSTestUtil.waitForMetric()
     (Chang Li via vinayakumarb)
 
+    HDFS-10270. TestJMXGet:testNameNode() fails. Contributed by Gergely Novák.
+
 Release 2.6.5 - 2016-10-08
 
   INCOMPATIBLE CHANGES
