YARN-5121. fix some container-executor portability issues. Contributed by Allen Wittenauer. Backport YARN-6698 by  Akira Ajisaka
(cherry picked from commit ef501b1a0b4c34a2cc43eb082d1c2364684cd7f1)
(cherry picked from commit 384803d09ac45886e74a0501f4b419a2b756c20c)

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -118,6 +118,9 @@ Release 2.7.4 - UNRELEASED
     YARN-4017. container-executor overuses PATH_MAX.
     (Sidharta Seethana via vvasudev)
 
+    YARN-5121. fix some container-executor portability issues.
+    (Allen Wittenauer) Backport YARN-6698 by  Akira Ajisaka.
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
