--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -15,6 +15,9 @@ Release 2.7.5 - UNRELEASED
     MAPREDUCE-6931. Remove TestDFSIO "Total Throughput" calculation.
     (Dennis Huo via shv)
 
+    MAPREDUCE-6750. Fix TestHSAdminServer#testRefreshSuperUserGroups
+    (Kihwal Lee via Varun Saxena)
+
 Release 2.7.4 - 2017-08-04
 
   INCOMPATIBLE CHANGES
