HDFS-10738. Fix TestRefreshUserMappings.testRefreshSuperUserGroupsConfiguration test failure. Contributed by Rakesh R.
(cherry picked from commit 0f701f433dd3be233bf53e856864c82349e8274e)
(cherry picked from commit 7f1879abe642219fce0328a8e96c983601d202b0)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -25,6 +25,10 @@ Release 2.7.5 - UNRELEASED
     HDFS-9107. Prevent NN's unrecoverable death spiral after full GC (Daryn
     Sharp via Colin P. McCabe)
 
+    HDFS-10738. Fix
+    TestRefreshUserMappings.testRefreshSuperUserGroupsConfiguration
+    test failure. (Rakesh R via kihwal)
+
 Release 2.7.4 - 2017-08-04
 
   INCOMPATIBLE CHANGES
