HDFS-10455. Logging the username when deny the setOwner operation. Contributed by Rakesh R.
(cherry picked from commit 1c5708f6ded6ba9fc007eed93c1f65ba44451241)
(cherry picked from commit c895f0893621fd6196c42ed46b97cb99cc2e9bee)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -241,6 +241,9 @@ Release 2.7.4 - UNRELEASED
     HDFS-11615. FSNamesystemLock metrics can be inaccurate due to millisecond precision.
     (Erik Krogen via zhz)
 
+    HDFS-10455. Logging the username when deny the setOwner operation.
+    (Tianyi Xu and Rakesh R via Brahma Reddy Battula)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
