--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -14,6 +14,8 @@ Release 2.6.6 - UNRELEASED
 
   BUG FIXES
 
+    HADOOP-13433 Race in UGI.reloginFromKeytab. (Duo Zhang via xiao)
+
 Release 2.6.5 - 2016-10-08
 
   INCOMPATIBLE CHANGES
