--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -70,6 +70,8 @@ Release 2.7.4 - UNRELEASED
     HDFS-10534. NameNode WebUI should display DataNode usage histogram.
     (Kai Sasaki via zhz)
 
+    HDFS-11333. Print a user friendly error message when plugins are not found. (Wei-Chiu Chuang)
+
   OPTIMIZATIONS
 
     HDFS-10896. Move lock logging logic from FSNamesystem into FSNamesystemLock.
