--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -224,6 +224,8 @@ Release 2.7.4 - UNRELEASED
     HDFS-11352. Potential deadlock in NN when failing over.
     (Eric Krogen via aajisaka)
 
+    HDFS-11379. DFSInputStream may infinite loop requesting block locations. Contributed by Daryn Sharp.
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
