HADOOP-14138. Remove S3A ref from META-INF service discovery, rely on existing core-default entry. Contributed by Steve Loughran
(cherry picked from commit 51fefbe38bf40373d2855163fa6444821b0f994c)

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -31,6 +31,9 @@ Release 2.7.4 - UNRELEASED
 
   OPTIMIZATIONS
 
+    HADOOP-14138. Remove S3A ref from META-INF service discovery, rely on
+    existing core-default entry (Steve Loughran via jlowe)
+
   BUG FIXES
 
     HADOOP-13362. DefaultMetricsSystem leaks the source name when a source
