--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -70,6 +70,9 @@ Release 2.7.4 - UNRELEASED
     YARN-3269. Yarn.nodemanager.remote-app-log-dir could not be configured to
     fully qualified path. (Xuan Gong via junping_du)
 
+    YARN-6310. OutputStreams in AggregatedLogFormat.LogWriter can be left
+    open upon exceptions (Haibo Chen via jlowe)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
