HADOOP-14214. DomainSocketWatcher::add()/delete() should not self interrupt while looping await(). Contributed by Mingliang Liu
(cherry picked from commit d35e79abc2fee7153a6168e6088f100de59d8c81)
(cherry picked from commit 47d3c29e300e0d43ce4a26807432c9c0361e172e)

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -188,6 +188,9 @@ Release 2.7.4 - UNRELEASED
     HADOOP-10829. Iteration on CredentialProviderFactory.serviceLoader is
     thread-unsafe. (enoy Antony via jnp)
 
+    HADOOP-14214. DomainSocketWatcher::add()/delete() should not self
+    interrupt while looping await(). (Mingliang Liu)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
