HADOOP-14211. FilterFs and ChRootedFs are too aggressive about enforcing 'authorityNeeded'. Contributed by Erik Krogen.
(cherry picked from commit 0e556a5ba645570d381beca60114a1239b27d49f)
(cherry picked from commit 96fe940e59127dc7c3e4182c3ed450c3cd8d858e)
(cherry picked from commit 5130128a31a75587f6ccca08c487e44f73685227)

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -123,6 +123,9 @@ Release 2.7.4 - UNRELEASED
     HADOOP-9631. ViewFs should use underlying FileSystem's server side defaults.
     (Lohit Vijayarenu and Erik Krogen via zhz)
 
+    HADOOP-14211. FilterFs and ChRootedFs are too aggressive about enforcing
+    "authorityNeeded". (Erik Krogen via wang)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
