MAPREDUCE-6873. MR Job Submission Fails if MR framework application path not on defaultFS. Contributed by Erik Krogen.
(cherry picked from commit de7efd2687ccb74608249abf4c83c84a9345ec0a)
(cherry picked from commit 3f5dc51ec94af5a20a319dd9bc807fc9e4db4f6a)
(cherry picked from commit 0acf2bca9c19bcf76526d2ff59886931cd4041dd)

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -32,6 +32,9 @@ Release 2.7.4 - UNRELEASED
     MAPREDUCE-6724. Single shuffle to memory must not exceed
     Integer#MAX_VALUE. (Haibo Chen via jlowe)
 
+    MAPREDUCE-6873. MR Job Submission Fails if MR framework application path
+    not on defaultFS. (xkrogen via zhz)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
