HADOOP-14276. Add a nanosecond API to Time/Timer/FakeTimer. Contributed by Erik Krogen.
(cherry picked from commit 95b7f1d29a5e2dadd70a56fca5faa006c5bd74fc)
(cherry picked from commit c85026038a6ef8d38b7a8563fbb64ac6edd1d4ce)
(cherry picked from commit ef8b30dd4beb8baf59f70e81ee938d7852922a42)

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -29,6 +29,9 @@ Release 2.7.4 - UNRELEASED
     HADOOP-13742. Expose "NumOpenConnectionsPerUser" as a metric.
     (Brahma Reddy Battula via kihwal)
 
+    HADOOP-14276. Add a nanosecond API to Time/Timer/FakeTimer.
+    (Erik Krogen via zhz)
+
   OPTIMIZATIONS
 
     HADOOP-14138. Remove S3A ref from META-INF service discovery, rely on
