Update CHANGES.txt for HDFS-11634.

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -80,6 +80,9 @@ Release 2.7.4 - UNRELEASED
     HDFS-10896. Move lock logging logic from FSNamesystem into FSNamesystemLock.
     (Erik Krogen via Zhe Zhang)
 
+    HDFS-11634. Optimize BlockIterator when iterating starts in the middle.
+    (shv)
+
   BUG FIXES
    
     HDFS-8307. Spurious DNS Queries from hdfs shell. (Andres Perez via aengineer)
