HDFS-8873. Allow the directoryScanner to be rate-limited. Contributed by Daniel Templeton.

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -75,6 +75,9 @@ Release 2.7.4 - UNRELEASED
     HDFS-11466. Change dfs.namenode.write-lock-reporting-threshold-ms default
     from 1000ms to 5000ms. (wang via zhz)
 
+    HDFS-8873. Allow the directoryScanner to be rate-limited (Daniel Templeton
+    via Colin P. McCabe)
+
   OPTIMIZATIONS
 
     HDFS-10896. Move lock logging logic from FSNamesystem into FSNamesystemLock.
