HDFS-11714. Newly added NN storage directory won't get initialized and cause space exhaustion. Contributed by Kihwal Lee. Added a CHANGES.txt entry (cherry picked from commit f77d138725662197ca0be874e9ec4dc430db2a4f)

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -256,6 +256,9 @@ Release 2.7.4 - UNRELEASED
     HDFS-11609. Some blocks can be permanently lost if nodes are decommissioned
     while dead. (kihwal)
 
+    HDFS-11714. Newly added NN storage directory won't get initialized
+    and cause space exhaustion. (kihwal)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
