--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -129,6 +129,9 @@ Release 2.7.4 - UNRELEASED
     HADOOP-14211. FilterFs and ChRootedFs are too aggressive about enforcing
     "authorityNeeded". (Erik Krogen via wang)
 
+    HADOOP-14371. License error in TestLoadBalancingKMSClientProvider.java.
+    (hu xiaodong via aajisaka)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
