HADOOP-14374. License error in GridmixTestUtils.java. Contributed by lixinglong.
(cherry picked from commit c60164fb60d3d8afb0fb8410936ccc231c4593f9)
(cherry picked from commit 753954f7beb3a1ca4a60cc3f59c809aed3839dd2)

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -132,6 +132,9 @@ Release 2.7.4 - UNRELEASED
     HADOOP-14371. License error in TestLoadBalancingKMSClientProvider.java.
     (hu xiaodong via aajisaka)
 
+    HADOOP-14374. License error in GridmixTestUtils.java.
+    (lixinglong via aajisaka)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
