--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -263,6 +263,8 @@ Release 2.7.4 - UNRELEASED
     HDFS-11714. Newly added NN storage directory won't get initialized
     and cause space exhaustion. (kihwal)
 
+    HDFS-11766. Fix findbugs warning in branch-2.7. (Chen Liang via aajisaka)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
