--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -265,9 +265,12 @@ Release 2.7.4 - UNRELEASED
 
     HDFS-11766. Fix findbugs warning in branch-2.7. (Chen Liang via aajisaka)
 
-	HDFS-11373. Backport HDFS-11258 and HDFS-11272
-	(File mtime change could not save to editlog).
-	(Contributed by Jimmy Xiang, backported by Akira Ajisaka)
+    HDFS-11373. Backport HDFS-11258 and HDFS-11272
+    (File mtime change could not save to editlog).
+    (Contributed by Jimmy Xiang, backported by Akira Ajisaka)
+
+    HDFS-11795. Fix ASF License warnings in branch-2.7.
+    (Yiqun Lin via aajisaka)
 
 Release 2.7.3 - 2016-08-25
 
