HADOOP-12975. Add jitter to CachingGetSpaceUsed's thread (Elliott Clark via Colin P. McCabe). HADOOP-14408. Backport contributed by Erik Krogen.
(cherry picked from commit bf780406f2b30e627bdf36ac07973f6931f81106)
(cherry picked from commit 56c997a1a61188693ed306b3ceddb13a2f2e6456)
(cherry picked from commit 04682cc6b00e2ba9c0a0a3d1f71a06f36cd4c1a9)

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -32,6 +32,10 @@ Release 2.7.4 - UNRELEASED
     HADOOP-14276. Add a nanosecond API to Time/Timer/FakeTimer.
     (Erik Krogen via zhz)
 
+    HADOOP-12975. Add jitter to CachingGetSpaceUsed's thread
+    (Elliott Clark via Colin P. McCabe).
+    HADOOP-14408. Backport contributed by Erik Krogen.
+
   OPTIMIZATIONS
 
     HADOOP-14138. Remove S3A ref from META-INF service discovery, rely on
