YARN-5543. ResourceManager SchedulingMonitor could potentially terminate the preemption checker thread. Contributed by Min Shen and Jonathan Hung.
(cherry picked from commit 2ada100da7cfe12946e43da2929bd80c2a8bd833)
Conflicts:
	hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-resourcemanager/src/main/java/org/apache/hadoop/yarn/server/resourcemanager/monitor/SchedulingMonitor.java

--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -79,6 +79,9 @@ Release 2.7.4 - UNRELEASED
     YARN-4562. YARN WebApp ignores the configuration passed to it for keystore
     settings (Sergey Shelukhin via vvasudev)
 
+    YARN-5543. ResourceManager SchedulingMonitor could potentially terminate the
+    preemption checker thread. (Min Shen, Jonathan Hung via shv).
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
