HADOOP-14434. Use MoveFileEx to allow renaming a file when the destination exists. Contributed by Lukas Majercak
(cherry picked from commit ef9e536a7137d209985d25a4769712c2db2c52bf)
(cherry picked from commit 4bb056544341726dd051353f1cc8430b801bf391)
(cherry picked from commit 475b50b44cebf5e5b4622e4092f4a447569b1b2b)

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -148,6 +148,9 @@ Release 2.7.4 - UNRELEASED
     HADOOP-12173. NetworkTopology::add calls toString always.
     (Inigo Goiri via cdouglas)
 
+    HADOOP-14434. Use MoveFileEx to allow renaming a file when the destination
+    exists. (Lukas Majercak via cdouglas)
+
 Release 2.7.3 - 2016-08-25
 
   INCOMPATIBLE CHANGES
